att React_Router_DOM

--- a/React_Router_DOM/3-RoutersAndOutlet.html
+++ b/React_Router_DOM/3-RoutersAndOutlet.html
@@ -12,7 +12,7 @@ const routers = createBrowserRouter([                      <!-- criar o router  
 {
 path: "/",                                                 <!-- criar a primeira rota -->
 element: <App/>,                                           <!-- criar o componente -->
-errorElement: <Error/>,                                    <!-- criar o componente de erro -->
+errorElement: <Error/>,                                    <!-- criar página de erro na pasta pages -->
 children: [                                                <!-- criar as rotas filhas -->
 {
 path: "/",
