creat CSS_modules

--- a/TailwindCSS/Tailwind_Install.html
+++ b/TailwindCSS/Tailwind_Install.html
@@ -22,3 +22,8 @@ colar o seguinte código dentro do arquivo index.css >
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+ 
+
+                                     Link do site oficial:
+                                    https://tailwindcss.com
