--- a/React/CSS/Material_UI/Use.html
+++ b/React/CSS/Material_UI/Use.html
@@ -1,6 +1,14 @@
                         importar o Material UI dentro do arquivo JSX
 
+
 import { Button } from '@mui/material'      <!-- importar o Material UI  EX: Button -->
 
 
-Consultar a documentação para mais informações de tipo, estilo e cores, caso exista.
+
+ Consultar a documentação para informações de cada componente, como tipo, estilo, cores e tamanho, caso exista >
+
+
+
+   Exemplo: <Button size="small" variant="contained" color="success">Botão</Button>
+                                     ou
+            <Button size="large" variant=outlined" color="error">Botão</Button>
